--- a/bal_proposals_bot/Dependencies.toml
+++ b/bal_proposals_bot/Dependencies.toml
@@ -7,20 +7,6 @@
 dependencies-toml-version = "2"
 
 [[package]]
-org = "anupama"
-name = "bal_proposals_bot"
-version = "0.1.0"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "lang.runtime"},
-	{org = "ballerinai", name = "observe"}
-]
-modules = [
-	{org = "anupama", packageName = "bal_proposals_bot", moduleName = "bal_proposals_bot"}
-]
-
-[[package]]
 org = "ballerina"
 name = "auth"
 version = "2.2.1"
@@ -285,6 +271,20 @@ dependencies = [
 ]
 modules = [
 	{org = "ballerinai", packageName = "observe", moduleName = "observe"}
+]
+
+[[package]]
+org = "runner"
+name = "bal_proposals_bot"
+version = "0.1.0"
+dependencies = [
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "lang.runtime"},
+	{org = "ballerinai", name = "observe"}
+]
+modules = [
+	{org = "runner", packageName = "bal_proposals_bot", moduleName = "bal_proposals_bot"}
 ]
 
 
