--- a/bal_proposals_bot/Dependencies.toml
+++ b/bal_proposals_bot/Dependencies.toml
@@ -193,7 +193,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "mime"
-version = "2.2.1"
+version = "2.2.2"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -215,7 +215,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "observe"
-version = "1.0.3"
+version = "1.0.4"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -274,7 +274,7 @@ modules = [
 ]
 
 [[package]]
-org = "runner"
+org = "bimsarapathiraja"
 name = "bal_proposals_bot"
 version = "0.1.0"
 dependencies = [
@@ -284,7 +284,7 @@ dependencies = [
 	{org = "ballerinai", name = "observe"}
 ]
 modules = [
-	{org = "runner", packageName = "bal_proposals_bot", moduleName = "bal_proposals_bot"}
+	{org = "bimsarapathiraja", packageName = "bal_proposals_bot", moduleName = "bal_proposals_bot"}
 ]
 
 
