Add event trigger

--- a/.github/workflows/generatehtml.yml
+++ b/.github/workflows/generatehtml.yml
@@ -1,12 +1,14 @@
 name: Generate Proposal HTML
 
-on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: "Log level"
-        required: true
-        default: "warning"
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       logLevel:
+#         description: "Log level"
+#         required: true
+#         default: "warning"
+
+on: push
 
 jobs:
   generateHTML:
