--- a/.github/workflows/generatehtml.yml
+++ b/.github/workflows/generatehtml.yml
@@ -4,7 +4,7 @@ name: Generate Proposal HTML
 #   workflow_dispatch:
 #     inputs:
 #       logLevel:
-#         description: "Log level"
+#         description: "Log leve"
 #         required: true
 #         default: "warning"
 
