--- a/.github/workflows/generatehtml.yml
+++ b/.github/workflows/generatehtml.yml
@@ -1,7 +1,7 @@
 name: Generate Proposal HTML
 
 on:
-  workflow_dispatch: //periodic method
+  workflow_dispatch: #periodic method
     inputs:
       logLevel:
         description: "Log lev"
