Change push part yml

--- a/.github/workflows/generatehtml.yml
+++ b/.github/workflows/generatehtml.yml
@@ -49,6 +49,6 @@ jobs:
         run: |
           git config --global user.email "bgpbimsara@gmail.com"
           git config --global user.name "bimsarapathiraja"
-          git push origin master
+          git push 
         env:
           GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
